# memshack

./: .dockerignore  Cargo.toml  Dockerfile  README.md
_diagrams/: memshack.drawio
controller/: Cargo.toml  build.rs
controller/src/: lib.rs  main.rs
crd/: Cargo.toml
crd/src/: lib.rs
resources/: Cargo.toml
resources/src/: children.rs  crd.rs  lib.rs  operator.rs
resources/src/children/: gateway.rs  root.rs  shard.rs
yaml/: crd.yaml  operator.yaml  test.yaml
