[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crd = { path = "../crd" }
futures = { workspace = true }
kube = { workspace = true, features = ["runtime"] }
k8s-openapi = { workspace = true, features = ["v1_26"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
crd = { path = "../crd" }
kube = { workspace = true }
serde_yaml = "0.9"
