[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
resources = { path = "../resources" }
futures = { workspace = true }
kube = { workspace = true, features = ["runtime"] }
k8s-openapi = { workspace = true, features = ["v1_26"] }
roperator = { git = "https://github.com/nicksenger/roperator.git", branch = "deps" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
resources = { path = "../resources" }
kube.workspace = true
serde_yaml = "0.9"
