[package]
name = "resources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { workspace = true, features = ["derive"] }
k8s-openapi = { workspace = true, features = ["v1_26"] }
schemars = { workspace = true, features = ["chrono"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
